discussion/kv_engine/182556/182556_rev2_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-53053: Add ItemPagerFactory

Adds a factory class for the item pager tasks. We will extend this
factory to return a  cross-bucket item pager task for buckets with
that feature enabled.

Change-Id: Ib7e0dcba94ca35f7074205f389f7a4f08b278809

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Vesko Karaganev
Date: 2022-11-23 12:48:09.000000000
Message: 
Uploaded patch set 2: Patch Set 1 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-11-23 13:44:40.000000000
Message: 
Patch Set 2: Verified-1 Code-Review-1

Build Failed 

https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42978/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5:
error: use of undeclared identifier "std"
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/42978/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21924/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51: error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
std::shared_ptr<NotifiableTask> ItemPagerFactory::getItemPager(
                                                  ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.h:28:5: error: use of undeclared identifier "std" [clang-diagnostic-error]
    std::shared_ptr<NotifiableTask> getItemPager(KVBucket& store);
    ^

</pre> ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21924/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/item_pager_factory.cc:25:51:
error: out-of-line definition of "getItemPager" does not match any declaration in "ItemPagerFactory" [clang-diagnostic-error]
 ( https://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/21924/ )

https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51207/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
..\kv_engine\engines\ep\tests\module_tests\vb_adapters_test.cc(138): error: Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
  Actual: it throws nothing.
[  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (6 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine-windows-master/51207/ )

https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11741/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
[2022-11-23T13:00:40.974Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:137: Failure
[2022-11-23T13:00:40.974Z] Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
[2022-11-23T13:00:40.974Z]   Actual: it throws nothing.
[2022-11-23T13:00:40.974Z] [  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (1 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/11741/ )

https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23436/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
[2022-11-23T13:13:03.476Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:138: Failure
[2022-11-23T13:13:03.476Z] Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
[2022-11-23T13:13:03.476Z]   Actual: it throws nothing.
[2022-11-23T13:13:03.476Z] [  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (5 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/23436/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/682/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
[2022-11-23T13:11:11.378Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:137: Failure
[2022-11-23T13:11:11.378Z] Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
[2022-11-23T13:11:11.378Z]   Actual: it throws nothing.
[2022-11-23T13:11:11.378Z] [  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (6 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-debug/job/master/682/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23970/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
[2022-11-23T13:22:45.825Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:137: Failure
[2022-11-23T13:22:45.825Z] Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
[2022-11-23T13:22:45.825Z]   Actual: it throws nothing.
[2022-11-23T13:22:45.825Z] [  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (1 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/23970/ )

https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25234/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
[2022-11-23T13:25:26.556Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:138: Failure
[2022-11-23T13:25:26.556Z] Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
[2022-11-23T13:25:26.556Z]   Actual: it throws nothing.
[2022-11-23T13:25:26.556Z] [  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (35 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25234/ )

ThreadSanitizer issue: data race /opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:180 in std::__uniq_ptr_impl<Collections::VB::Manifest, std::default_delete<Collections::VB::Manifest> >::reset(Collections::VB::Manifest*)  ( https://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/25234/ )

https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24384/ : FAILURE

Failure of GoogleTest "VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket":

<pre>
[ RUN      ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
[2022-11-23T13:19:41.723Z] ../kv_engine/engines/ep/tests/module_tests/vb_adapters_test.cc:137: Failure
[2022-11-23T13:19:41.723Z] Expected: task_executor->runNextTask(NONIO_TASK_IDX, "test") throws an exception of type std::logic_error.
[2022-11-23T13:19:41.723Z]   Actual: it throws nothing.
[2022-11-23T13:19:41.723Z] [  FAILED  ] VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket (2 ms)
VBAdaptorsTest.CrossBucketVisitorsWorksForSingleBucket
</pre>
 ( https://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/24384/ )

https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32388/ : FAILURE

No problems were identified. If you know why this problem occurred, please add a suitable Cause for it. ( https://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/32388/ )

https://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/21336/ : SUCCESS

https://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/11651/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
